<?xml version="1.0" encoding="utf-8"?>
<resources>
	
    <!-- Facebook Application key string -->
    <string name="applicationId">240698066116165</string>
    <string name="app_name">NguoiSaiGon</string>
    <string name="welcomebg">Welcome screen</string>
    <string name="app_id">NguoiSaiGon</string>
    
    <!-- Define key string -->
    
    <!-- Application setting json -->
    <string name="setting_applink">appLink</string>
    <string name="setting_parseappid">parseAppId</string>
    <string name="setting_settingid">settingId</string>
    
    <!-- Welcome Screen -->
    <string name="welcom_loading">Loading</string>
    <string name="welcom_recheck">Kiểm tra lại</string>
    
    <!-- Application News json -->
    <string name="news_createdate">createDate</string>
    <string name="news_newscontent">newsContent</string>
    <string name="news_newsid">newsId</string>
    <string name="news_ownerinfo">ownerInfo</string>
    <string name="news_title">title</string>
    
    <!-- Application News json -->
    <string name="events_eventcontent">eventContent</string>
    <string name="events_eventdate">eventDate</string>
    <string name="events_eventid">eventId</string>
    <string name="events_ownerinfo">ownerInfo</string>
    <string name="events_title">title</string>
    
    <!-- Application Contact view -->
    <string name="contact_cafe">cafe</string>
    <string name="contact_nguoisaigon">Người Sài Gòn</string>
    <string name="contact_address1">71/4 Mạc Thị Bưởi Quận 1,</string>
    <string name="contact_address2">Tp. Hồ Chí Minh</string>
    <string name="contact_email">Ubeehoang@gmail.com</string>
    <string name="contact_phone1">0932 113 103</string>
    <string name="contact_phone2">0932 113 183</string>
    <string name="contact_facebook">Facebook</string>
    
    <string name="loading">Đang tải dữ liệu...</string>
    
     <!-- Application News layout -->
    <string name="page_default">_/_</string>
    <string name="date_default">__/____</string>
    <string name="date_full_default">12/04/2014</string>
    <string name="month_label">Tháng</string>
    <string name="create_date">Ngày đăng</string>
    <string name="create_date_default">__/__/____</string>
    <string name="title_default">người sài gòn</string>
    <string name="content_default">cà phê người sài gòn có khuyến mãi đặc biệt vào ngày thứ 7</string>
    <string name="no_news">Không có tin tức trong ngày hôm nay</string>
    
    <!-- Application Events layout -->
    <string name="no_event">Không có sự kiện trong ngày hôm nay</string>
    
    <!-- Application Music layout -->
    <string name="no_song">Không có bài hát nào trong playlist</string>
    
    <!-- Application Store Detail layout -->
    <string name="product_name_default">"Product's name"</string>
    <string name="product_description_default">"Product's description"</string>
    <string name="product_size">Size:</string>
    <string name="product_quantity">Số lượng:</string>
    <string name="product_quantity_default">1</string>
    <string name="product_unit_price_default">0 đ</string>
    <string name="product_price">Đơn giá:</string>
    
    <!-- Application Cart layout -->
    <string name="cart_product_title">Sản phẩm</string>
    <string name="cart_quantity_title">Số lượng</string>
    <string name="cart_price_title">Đơn giá</string>
    <string name="cart_total_title">Thành tiền</string>
    <string name="cart_productname_default">Sản phẩm 1</string>
    <string name="cart_quantity_default">0</string>
    <string name="cart_total_default">0</string>
    <string name="cart_total_text">Tổng cộng:</string>
    
    <!-- Application Checkout layout -->
    <string name="checkout_step1_title">Bước 1</string>
    <string name="checkout_step2_title">Bước 2</string>
    <string name="checkout_step3_title">Bước 3</string>
    <string name="checkout_step4_title">Hoàn tất</string>
    <string name="checkout_step1_main_title">Bước 1 - Thông tin liên lạc</string>
    <string name="checkout_step2_main_title">Bước 2 - Hình thức thanh toán</string>
    <string name="checkout_step3_main_title">Bước 3 - Xác nhận đơn hàng</string>
    <string name="checkout_step4_main_title">Cám ơn quý khách đã mua hàng tại\nNgười Sài Gòn</string>
    <string name="checkout_step1_name">Tên người mua</string>
    <string name="checkout_step1_email">Email</string>
    <string name="checkout_step1_phone">Điện thoại</string>
    <string name="checkout_step1_address">Địa chỉ giao hàng</string>
    <string name="checkout_step1_note">Ghi chú</string>
    <string name="checkout_step1_detail">Là các thông tin cần thiết để chúng tôi liên lạc với quý khách</string>
    <string name="checkout_step2_payment_type1">Thanh toán khi giao hàng</string>
    <string name="checkout_step2_payment_type1_detail">Hình thức thanh toán này chỉ áp dụng cho khách hàng trong địa bàn thành phố Hồ Chí Minh</string>
    <string name="checkout_step2_payment_type2">Chuyển khoản</string>
    <string name="checkout_step2_payment_type2_detail">Vui lòng chuyển số tiền cần thanh toán đến tài khoản sau:</string>
    <string name="checkout_step2_payment_type2_account_name">Tên TK: Nguyễn Thị Kim Chi</string>
    <string name="checkout_step2_payment_type2_account_number">SỐ TK: 007.100.482.0302 (Ngân Hàng VietcomBank)</string>
    <string name="checkout_step2_payment_type3">Thanh toán bằng thẻ quốc tế</string>
    <string name="checkout_step2_payment_type3_detail">Thanh toán trực tiếp thông qua các dịch vụ tín dụng quốc tế</string>
    <string name="checkout_step4_detail">Quý khách đã chọn hình thức thanh toán khi giao hàng. Chúng tôi sẽ liên lạc với quý khách trong thời gian sớm nhất.</string>
    <string name="checkout_step4_facebook_title">Tôi đã sử dụng Người Sài Gòn App để mua hàng</string>
    <string name="checkout_step4_store_title">Tiếp tục xem hàng trong Store</string>
    <string name="checkout_step4_home_title">Trở về màn hình chính</string>
    <string name="checkout_step3_name_title">Tên:</string>
    <string name="checkout_step3_phone_title">Điện thoại:</string>
    <string name="checkout_step3_address_title">Địa chỉ:</string>
    <string name="checkout_step3_note_title">Ghi chú:</string>
    <string name="checkout_step3_product_name_title">Sản phẩm</string>
    <string name="checkout_step3_product_quantity_title">Số lượng</string>
    <string name="checkout_step3_product_price_title">Đơn giá</string>
    <string name="checkout_step3_product_total_title">Thành tiền</string>
    <string name="checkout_step3_payment_method_default">Thanh toán khi giao hàng</string>
    <string name="checkout_step3_payment_total_title">Tổng cộng:</string>
    <string name="checkout_step3_payment_total_default">0 đ</string>
    <string name="no_item">Không có sản phẩm trong ngày hôm nay</string>
    <string name="line_break">-------------------\n</string>
    <string name="title">Thông tin được chia sẻ từ Người Sài Gòn App.\n</string>
    <string name="app_url">http://play.google.com/store/apps/details?id=com.nguoisaigon</string>
    
</resources>
