<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="95sp"
            android:text="@string/create_date"
            android:textColor="@android:color/black"
            android:textSize="6pt" />

        <TextView
            android:id="@+id/tvNewsCreateDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="165sp"
            android:text="@string/create_date_default"
            android:textColor="@android:color/black"
            android:textSize="6pt" />

        <TextView
            android:id="@+id/tvNewsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30sp"
            android:text="@string/title_default"
            android:textColor="@android:color/black"
            android:textSize="8pt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvNewsContent"
            android:layout_width="450sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60sp"
            android:text="@string/content_default"
            android:textColor="@android:color/black"
            android:textSize="6pt" />
    </FrameLayout>

</ScrollView>